fix: nav item in dark mode

--- a/src/ContentScript/theme/layout.less
+++ b/src/ContentScript/theme/layout.less
@@ -28,6 +28,12 @@ body {
   .repohead.experiment-repo-nav {
     background: @head-bg !important;
     border-color: @border-color !important;
+
+    .js-responsive-underlinenav-overflow {
+      .UnderlineNav-item {
+        color: @link-color;
+      }
+    }
   }
 
   /* Repo label (i.e. Private, Archived) */
